code updated - completed task for video metadata